# integer-programming

./: README.md  exercise1.2.py  pyproject.toml
assignment-1/: data_cg_cube.cg  data_cg_simplex4.cg  solution.py  template_column_generation.py  test_data.cg
assignment-2/: graph1.txt  inverse.m  separation.ipynb  solution.py
assignment-3/: data_cg_cross4.cg  solution.py  template_benders.py
