[tool.poetry]
name = "integer-programming"
version = "0.1.0"
description = ""
authors = ["Jeroen van Riel"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
gurobipy = "^10.0.1"
numpy = "^1.24.3"
scipy = "^1.10.1"
matplotlib = "^3.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
